--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "deps/x264"]
 	path = deps/x264
 	url = https://github.com/mirror/x264.git
+[submodule "deps/rtmpdump"]
+	path = deps/rtmpdump
+	url = https://git.ffmpeg.org/rtmpdump.git
